fixed layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@ $bp-small: 37.5em;
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
     @media only screen and (max-width: $bp-medium) {
-      height: 95vh;
+      height: 70vh;
     }
     .header-content {
       .intro-flex {
@@ -246,7 +246,7 @@ $bp-small: 37.5em;
           border-radius: 0.5rem;
           // box-shadow: 40px 30px 10px 10px rgb(69, 243, 39, 0.5);
           @media only screen and (max-width: $bp-medium) {
-            width: 25rem;
+            width: 15rem;
             height: 15rem;
             // box-shadow: 10px 10px 10px 3px rgb(69, 243, 39, 0.5);
           }
